# socialpulse-v2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.kafka.yml  docker-compose.mongo-sharded.yml  pyproject.toml  requirements.txt
configs/: query_registry.json  topic_aliases.json
docs/: ARCHITECTURE.md  ROADMAP.md  phase-21-mongo-sharded-ingestion.md
scripts/mongo/: check_mongo_cluster.sh  init_sharded_cluster.sh
src/socialpulse_v2/config/: lakehouse.py  query_registry.py
src/socialpulse_v2/core/: logging.py  paths.py  settings.py
src/socialpulse_v2/dashboard/: app.py  data_access.py
src/socialpulse_v2/orchestration/: backfill_youtube_raw_to_mongo.py  bootstrap_historical_youtube.py  bootstrap_lakehouse.py  check_mongo_connection.py  consume_youtube_comments_to_bronze.py  plan_daily_collection.py  run_bronze_daily_ingestion.py  (+13 more)
tests/: test_imports.py
tests/collectors/: test_youtube_api_client.py
tests/config/: test_query_registry.py  test_query_registry_dynamic.py
tests/dashboard/: test_data_access.py
tests/gold/: test_build_youtube_comments_predictive_gold.py  test_build_youtube_sentiment_gold.py  test_dashboard_daily_overview.py
tests/pipelines/: test_bronze_daily_ingestion.py  test_daily_youtube_collection.py  test_historical_bootstrap.py  test_transformer_sentiment_pipeline.py
tests/planning/: test_daily_collection_plan.py
tests/silver/: test_build_youtube_comments_sentiment.py  test_build_youtube_comments_silver.py
tests/storage/: test_lakehouse.py
tests/streaming/: test_kafka_consume_to_bronze.py  test_youtube_events.py
(+31 files in other folders)
